--- a/sass/_modals.sass
+++ b/sass/_modals.sass
@@ -217,7 +217,7 @@
 
 #friendSuggestionList, #currentFriends
   +no-bullets
-  max-height: 200px
+  max-height: 195px
   overflow-y: scroll
   border-radius: 8px
   border: 2px solid #ccc
